--- a/resources/templates/database_caribou.yml
+++ b/resources/templates/database_caribou.yml
@@ -2,21 +2,21 @@ production:
     classname:    org.postgresql.Driver
     subprotocol:  postgresql
     host:         localhost
-    database:     caribou
+    database:     template1
     user:         postgres
 
 development:
     classname:    org.postgresql.Driver
     subprotocol:  postgresql
     host:         localhost
-    database:     caribou_dev
+    database:     template1
     user:         postgres
 
 test:
     classname:    org.postgresql.Driver
     subprotocol:  postgresql
     host:         localhost
-    database:     caribou
+    database:     template1
     user:         postgres
 
 
