--- a/resource_package/config/database.yml
+++ b/resource_package/config/database.yml
@@ -2,7 +2,7 @@ production:
     classname:    org.postgresql.Driver
     subprotocol:  postgresql
     host:         localhost
-    database:     $safeproject
+    database:     $safeproject$
     user:         postgres
 
 development:
